--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/lab": "^5.0.0-alpha.152",
+    "@mui/x-date-pickers": "^6.18.2",
+    "dayjs": "^1.11.10",
     "react-material-ui-carousel": "^3.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
