--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/x-date-pickers": "^6.18.2",
     "dayjs": "^1.11.10",
     "react-material-ui-carousel": "^3.4.2",
+    "react-countdown-circle-timer": "^3.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
