--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,22 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.17",
     "@mui/lab": "^5.0.0-alpha.152",
+    "@mui/material": "^5.14.17",
     "@mui/x-date-pickers": "^6.18.2",
-    "dayjs": "^1.11.10",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-countdown-circle-timer": "^3.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "validator": "^13.11.0",
+    "react-i18next": "^13.5.0",
+    "i18next-http-backend": "^2.4.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
