--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "i18next-http-backend": "^2.4.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "rxjs": "^7.8.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
