--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react-i18next": "^13.5.0",
-    "i18next-http-backend": "^2.4.2",
     "dayjs": "^1.11.10",
+    "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
-    "rxjs": "^7.8.1",
+    "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
